--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang.csproj
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang.csproj
@@ -8,8 +8,33 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\facebook.png" />
+    <None Remove="Images\google.png" />
+    <None Remove="Images\login.png" />
+    <None Remove="Images\logo.png" />
+    <None Remove="Images\signup.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Fonts\" />
-    <Folder Include="MVVM\Model\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\facebook.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\google.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\login.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\logo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\signup.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
