--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang.csproj
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="BookImages\BookImage_01.jpg" />
+    <None Remove="BookImages\BookImage_02.jpg" />
+    <None Remove="BookImages\BookImage_03.jpg" />
+    <None Remove="BookImages\BookImage_04.jpg" />
+    <None Remove="BookImages\BookImage_05.jpg" />
     <None Remove="Images\facebook.png" />
     <None Remove="Images\google.png" />
     <None Remove="Images\login.png" />
@@ -24,6 +29,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="BookImages\BookImage_01.jpg" />
+    <Resource Include="BookImages\BookImage_02.jpg" />
+    <Resource Include="BookImages\BookImage_03.jpg" />
+    <Resource Include="BookImages\BookImage_04.jpg" />
+    <Resource Include="BookImages\BookImage_05.jpg" />
     <Resource Include="Images\facebook.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
