Update Sales Report UC & Binding Data

--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang.csproj
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang.csproj
@@ -20,7 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FontAwesome" Version="4.7.0" />
     <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
