--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang.csproj
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang.csproj
@@ -15,6 +15,7 @@
     <None Remove="BookImages\BookImage_05.jpg" />
     <None Remove="Images\facebook.png" />
     <None Remove="Images\google.png" />
+    <None Remove="Images\login.jpg" />
     <None Remove="Images\login.png" />
     <None Remove="Images\logo.png" />
     <None Remove="Images\OrderManagementSVG\calendar-solid.png" />
@@ -46,6 +47,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\google.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\login.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\login.png">
