--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang.csproj
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang.csproj
@@ -14,6 +14,7 @@
     <None Remove="BookImages\BookImage_04.jpg" />
     <None Remove="BookImages\BookImage_05.jpg" />
     <None Remove="Fonts\fontawesome5.otf" />
+    <None Remove="Fonts\password.ttf" />
     <None Remove="Images\facebook.png" />
     <None Remove="Images\google.png" />
     <None Remove="Images\login.jpg" />
@@ -41,7 +42,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Fonts\fontawesome5.otf" />
+    <Resource Include="Fonts\fontawesome5.otf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Fonts\password.ttf" />
     <Resource Include="Images\facebook.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
@@ -69,6 +73,21 @@
     <Resource Include="Images\signup.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
