--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang.csproj
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang.csproj
@@ -1,93 +1,94 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net7.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <UseWPF>true</UseWPF>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>WinExe</OutputType>
+		<TargetFramework>net7.0-windows</TargetFramework>
+		<Nullable>enable</Nullable>
+		<UseWPF>true</UseWPF>
+		<ApplicationManifest>requireAdministratorLevel.manifest</ApplicationManifest>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="BookImages\BookImage_01.jpg" />
-    <None Remove="BookImages\BookImage_02.jpg" />
-    <None Remove="BookImages\BookImage_03.jpg" />
-    <None Remove="BookImages\BookImage_04.jpg" />
-    <None Remove="BookImages\BookImage_05.jpg" />
-    <None Remove="Fonts\fontawesome5.otf" />
-    <None Remove="Fonts\password.ttf" />
-    <None Remove="Images\facebook.png" />
-    <None Remove="Images\google.png" />
-    <None Remove="Images\login.jpg" />
-    <None Remove="Images\login.png" />
-    <None Remove="Images\logo.png" />
-    <None Remove="Images\OrderManagementSVG\calendar-solid.png" />
-    <None Remove="Images\OrderManagementSVG\cart-shopping-solid.png" />
-    <None Remove="Images\OrderManagementSVG\magnifying-glass-solid.png" />
-    <None Remove="Images\OrderManagementSVG\money-bill-solid.png" />
-    <None Remove="Images\OrderManagementSVG\plus-solid.png" />
-    <None Remove="Images\OrderManagementSVG\rotate-right-solid.png" />
-    <None Remove="Images\OrderManagementSVG\trash-can-solid.png" />
-    <None Remove="Images\OrderManagementSVG\truck-solid.png" />
-    <None Remove="Images\OrderManagementSVG\user-solid%281%29.png" />
-    <None Remove="Images\signup.png" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Remove="BookImages\BookImage_01.jpg" />
+		<None Remove="BookImages\BookImage_02.jpg" />
+		<None Remove="BookImages\BookImage_03.jpg" />
+		<None Remove="BookImages\BookImage_04.jpg" />
+		<None Remove="BookImages\BookImage_05.jpg" />
+		<None Remove="Fonts\fontawesome5.otf" />
+		<None Remove="Fonts\password.ttf" />
+		<None Remove="Images\facebook.png" />
+		<None Remove="Images\google.png" />
+		<None Remove="Images\login.jpg" />
+		<None Remove="Images\login.png" />
+		<None Remove="Images\logo.png" />
+		<None Remove="Images\OrderManagementSVG\calendar-solid.png" />
+		<None Remove="Images\OrderManagementSVG\cart-shopping-solid.png" />
+		<None Remove="Images\OrderManagementSVG\magnifying-glass-solid.png" />
+		<None Remove="Images\OrderManagementSVG\money-bill-solid.png" />
+		<None Remove="Images\OrderManagementSVG\plus-solid.png" />
+		<None Remove="Images\OrderManagementSVG\rotate-right-solid.png" />
+		<None Remove="Images\OrderManagementSVG\trash-can-solid.png" />
+		<None Remove="Images\OrderManagementSVG\truck-solid.png" />
+		<None Remove="Images\OrderManagementSVG\user-solid%281%29.png" />
+		<None Remove="Images\signup.png" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Expression.Blend.Sdk" Version="1.0.2" />
-    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.5.0" />
-    <PackageReference Include="FontAwesome" Version="4.7.0" />
-    <PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />
-    <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Expression.Blend.Sdk" Version="1.0.2" />
+		<PackageReference Include="Extended.Wpf.Toolkit" Version="4.5.0" />
+		<PackageReference Include="FontAwesome" Version="4.7.0" />
+		<PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />
+		<PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Resource Include="Fonts\fontawesome5.otf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Fonts\password.ttf" />
-    <Resource Include="Images\facebook.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Images\google.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Images\login.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Images\login.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Images\logo.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Images\OrderManagementSVG\calendar-solid.png" />
-    <Resource Include="Images\OrderManagementSVG\cart-shopping-solid.png" />
-    <Resource Include="Images\OrderManagementSVG\magnifying-glass-solid.png" />
-    <Resource Include="Images\OrderManagementSVG\money-bill-solid.png" />
-    <Resource Include="Images\OrderManagementSVG\plus-solid.png" />
-    <Resource Include="Images\OrderManagementSVG\rotate-right-solid.png" />
-    <Resource Include="Images\OrderManagementSVG\trash-can-solid.png" />
-    <Resource Include="Images\OrderManagementSVG\truck-solid.png" />
-    <Resource Include="Images\OrderManagementSVG\user-solid(1).png" />
-    <Resource Include="Images\signup.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
-  </ItemGroup>
+	<ItemGroup>
+		<Resource Include="Fonts\fontawesome5.otf">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Resource>
+		<Resource Include="Fonts\password.ttf" />
+		<Resource Include="Images\facebook.png">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Resource>
+		<Resource Include="Images\google.png">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Resource>
+		<Resource Include="Images\login.jpg">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Resource>
+		<Resource Include="Images\login.png">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Resource>
+		<Resource Include="Images\logo.png">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Resource>
+		<Resource Include="Images\OrderManagementSVG\calendar-solid.png" />
+		<Resource Include="Images\OrderManagementSVG\cart-shopping-solid.png" />
+		<Resource Include="Images\OrderManagementSVG\magnifying-glass-solid.png" />
+		<Resource Include="Images\OrderManagementSVG\money-bill-solid.png" />
+		<Resource Include="Images\OrderManagementSVG\plus-solid.png" />
+		<Resource Include="Images\OrderManagementSVG\rotate-right-solid.png" />
+		<Resource Include="Images\OrderManagementSVG\trash-can-solid.png" />
+		<Resource Include="Images\OrderManagementSVG\truck-solid.png" />
+		<Resource Include="Images\OrderManagementSVG\user-solid(1).png" />
+		<Resource Include="Images\signup.png">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Resource>
+	</ItemGroup>
 
-  <ItemGroup>
-    <Compile Update="Properties\Resources.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Update="Properties\Resources.Designer.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>Resources.resx</DependentUpon>
+		</Compile>
+	</ItemGroup>
 
-  <ItemGroup>
-    <EmbeddedResource Update="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Update="Properties\Resources.resx">
+			<Generator>ResXFileCodeGenerator</Generator>
+			<LastGenOutput>Resources.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+	</ItemGroup>
 
 </Project>
