--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang.csproj
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang.csproj
@@ -18,6 +18,7 @@
 		<None Remove="Fonts\password.ttf" />
 		<None Remove="Images\facebook.png" />
 		<None Remove="Images\google.png" />
+		<None Remove="Images\icon.ico" />
 		<None Remove="Images\login.jpg" />
 		<None Remove="Images\login.png" />
 		<None Remove="Images\logo.png" />
@@ -52,6 +53,9 @@
 		</Resource>
 		<Resource Include="Images\google.png">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Resource>
+		<Resource Include="Images\icon.ico">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Resource>
 		<Resource Include="Images\login.jpg">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
